--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -68,6 +68,7 @@
                               <option value="Делчево" fake-name="Delcevo">Делчево</option>
                               <option value="Демир Капија" fake-name="Demir Kapija">Демир Капија</option>
                               <option value="Демир Хисар" fake-name="Demir Hisar">Демир Хисар</option>
+                              <option value="Дојран" fake-name="Dojran">Дојран</option>
                               <option value="Ѓорче Петров" fake-name="Gjorce Petrov">Ѓорче Петров</option>
                               <option value="Зелениково" fake-name="Zelenikovo">Зелениково</option>
                               <option value="Илинден" fake-name="Ilinden">Илинден</option>
