--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -380,7 +380,8 @@ input[type=number] {
     font-size: 12px;
     padding: 3px 5px;
     font-weight: 600;
-    background-color: white;
+    background-color: var(--red);
+    color: white;
     border-radius: 5px;
     animation: nudge 4s linear infinite;
 }
