--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -280,6 +280,7 @@ select {
           <td class="table-dark"></td>
           <td class="table-dark"></td>
           <td class="table-dark fw-bold">{{ total_ad_spend|floatformat:2 }}</td>
+          <td class="table-dark"></td>
           <td class="table-dark fw-bold">{{ total_profit }}</td>
           <td class="table-dark fw-bold">{{ total_cpp|floatformat:2 }}</td>
           <td class="table-dark "></td>
