--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -11,6 +11,7 @@
     
     <meta property="og:type" content="Website">
     <meta property="og:site_name" content="GreenGoShop Macedonia">
+    {% block metatags %}{% endblock metatags %}
     
     {% if title %}
         <title>{{ title }} - GreenGoShop</title>
