--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -1,5 +1,8 @@
 {% extends 'shop/base.html' %}
 {% load static %}
+{% block metatags %}
+<meta property="og:image" content="https://greengoshop.mk{{product.thumbnail.url}}" />
+{% endblock metatags %}
 {% block content %}
 <style>#overlay-loader{position:absolute;height:559px;width:550px;z-index:100;background:#fff;display:flex;align-items:center;justify-content:center}@media (max-width:767px){#overlay-loader{width:100%;height:100vw}}#overlay-loader img{width:40px;height:40px}</style>
 <div class="content-container product-page">
