--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -1,4 +1,7 @@
 {% extends "shop/base.html" %}
+{% block metatags %}
+<meta property="og:image" content="https://greengoshop.mk{% static 'icons/logo_meta_tag.webp' %}" />
+{% endblock metatags %}
 {% block content %}
     <div class="content-container">
         {% for product in category %}
