--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -1,5 +1,8 @@
 {% extends "shop/base.html" %}
 {% load static %}
+{% block metatags %}
+<meta property="og:image" content="https://greengoshop.mk{% static 'icons/logo_meta_tag.webp' %}" />
+{% endblock metatags %}
 {% block content %}
 <style>#footer,.footer-section{display:none}.red{border-color:red}#ordered_items_notice_wrapper{visibility:hidden}</style>
 {% if cart %}
