--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -1,4 +1,5 @@
 {% extends "shop/base.html" %}
+{% load static %}
 {% block metatags %}
 <meta property="og:image" content="https://greengoshop.mk{% static 'icons/logo_meta_tag.webp' %}" />
 {% endblock metatags %}
