--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -25,10 +25,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main_minified.css' %} ">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'icons/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'icons/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'icons/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'icons/site.webmanifest' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/webmanifest/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/webmanifest/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/icons/webmanifest/favicon-16x16.png">
+    <link rel="manifest" href="/static/icons/webmanifest/site.webmanifest">
+    <link rel="mask-icon" href="/static/icons/webmanifest/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/static/icons/webmanifest/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/static/icons/webmanifest/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <!-- Meta Pixel Code -->
     <script>
     !function(f,b,e,v,n,t,s)
