--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -6,6 +6,7 @@
     <div class="ordered_items_notice_details">
         <div style="display: flex;flex-direction: column;">
             <p class="ordered_items_small ordered_item_person"><span id="order_person_name" style="font-weight:600">Zoran</span> само што нарача</p>
+            <p style="position: absolute;right:0;padding:16px;top:0;cursor:pointer;" id="close_ordered_items_notice">&#10005;</p>
             <p id="order_person_product_name" class="ordered_items_big">ZASTITNA CERADA ZA AVTOMOBILSKI RABOTI</p>
             <p> 
                 <span class="product-regular-price">
