--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -41,7 +41,7 @@
             
                 <ul id="FieldList">
                     <li><label for="name">Име и Презиме <abbr title="required" class="required">*</abbr></label>
-                    <input type="text" required name="name"></li>
+                    <input type="text" required name="name" id="checkout_input_name"></li>
 
                     <li><label for="country">Држава/Регион <abbr title="required" class="required">*</abbr></label>
                     <input type="text" required name="country" value="Р. Северна Македонија"></li>
@@ -114,7 +114,7 @@
                     </li>
 
                     <li><label for="number">Телефонски број <abbr title="required" class="required">*</abbr></label>
-                        <input type="tel" placeholder="формат: 072-256-393"required name="number"></li>
+                        <input type="tel" placeholder="формат: 072-256-393"required name="number" id="checkout_input_phone"></li>
                 </ul>
             
         </div>
