--- a/shop/templates/shop/shopmanager/includes/sh_header.html
+++ b/shop/templates/shop/shopmanager/includes/sh_header.html
@@ -5,6 +5,7 @@
         <a href="{% url 'shopmanagerhome' %}" class="header-item">Непотврдени нарачки</a>
         <a href="{% url 'shconfirmed' %}" class="header-item">Потврдени нарачки</a>
         <a href="{% url 'shdeleted' %}" class="header-item">Избришени нарачки</a>
+        <a href="{% url 'shabandonedcarts' %}" class="header-item">Abandoned Carts</a>
     </div>
     <div class="header-content2">
         <a href="#" class="header-item" target="_blank">ОДИ ВО АДМИН</a>
