--- a/shop/templates/shop/shopmanager/abandoned_carts.html
+++ b/shop/templates/shop/shopmanager/abandoned_carts.html
@@ -24,7 +24,7 @@
               <td>
                 <p style="margin:0!important">{{ cart.phone }}</p>
                 {% if cart.possible_number %}
-                <p style="margin:0!important" data-toggle="tooltip" data-placement="top" title="Човек со истото име и презиме претходно има нарачан со тај број">Можен број: {{ cart.possible_number }}</p>
+                <p style="margin:0!important" data-toggle="tooltip" data-placement="top" title="Човек со истото име и презиме претходно има нарачано со тај број">Можен број: {{ cart.possible_number }}</p>
                 {% endif %}
             </td>  
               <td style="word-wrap: break-word; max-width: 520px;" data-toggle="tooltip" data-placement="top" title="Во цената не е пресметано количина, туку само цената на продукт">
