--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -186,11 +186,27 @@ select {
   .dropdown-select a:hover {
       color: #666;
   }
+  #campaign-list a:hover{
+    transform: scale(1.05);
+    transition: transform 0s;
+    color: #0d6efd!important;
+  }
 </style>
 <div class="container-fluid text-center py-3 border">
     <h3>Аналитика за производи</h3>
 </div>
-
+<div class="container-xxl d-flex p-3 border-bottom border-start border-end text-uppercase overflow-hidden" id="campaign-list">
+  {% for option in search_options %}
+  {% if daily_item == option %}
+  <a href="{{  option.owner.get_absolute_url }}" class="link-primary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
+  {% else %}
+  <a href="{{  option.owner.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
+  {% endif %}
+  {% endfor %}
+</div>
+<div class="container-xxl d-flex p-3 border-bottom border-start border-end text-uppercase overflow-hidden" id="campaign-list">
+  <a href="#" class="link-primary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">Branovidna presa za kosa</a>
+</div>
 <div class="container-xxl w-80 py-4">
 {% csrf_token %}
 <input type="hidden" name="owner" id="owner" value="{{ daily_item.id }}">
