--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -192,16 +192,12 @@ select {
     color: #0d6efd!important;
   }
 </style>
-<div class="container-fluid text-center py-3 border">
+<div class="container-fluid text-center border">
     <h3>Аналитика за производи</h3>
 </div>
 <div class="container-xxl d-flex p-3 border-bottom border-start border-end text-uppercase overflow-hidden" id="campaign-list">
-  {% for option in search_options %}
-  {% if daily_item == option %}
-  <a href="{{  option.owner.get_absolute_url }}" class="link-primary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
-  {% else %}
-  <a href="{{  option.owner.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
-  {% endif %}
+  {% for option in search_options %}  
+  <a href="{{ option.owner.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
   {% endfor %}
 </div>
 <div class="container-xxl d-flex p-3 border-bottom border-start border-end text-uppercase overflow-hidden" id="campaign-list">
