--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -197,7 +197,7 @@ select {
 </div>
 <div class="container-xxl d-flex p-3 border-bottom border-start border-end text-uppercase overflow-hidden" id="campaign-list">
   {% for option in search_options %}  
-  <a href="{{ option.owner.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
+  <a href="{{ option.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.product.sku }}</a>
   {% endfor %}
 </div>
 
