--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -196,8 +196,12 @@ select {
     <h3>Аналитика за производи</h3>
 </div>
 <div class="container-xxl d-flex p-3 border-bottom border-start border-end text-uppercase overflow-hidden" id="campaign-list">
-  {% for option in search_options %}  
-  <a href="{{ option.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:300px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.product.sku }}</a>
+  {% for option in search_options %}
+  {% if option==daily_item %}
+  <a href="{{ option.get_absolute_url }}" class="link-primary text-decoration-none" style="min-width:500px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.product.sku }}</a>
+  {% else %}
+  <a href="{{ option.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:500px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.product.sku }}</a>
+  {% endif %}
   {% endfor %}
 </div>
 
