--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -192,10 +192,10 @@ select {
     color: #0d6efd!important;
   }
 </style>
-<div class="container-fluid text-center border">
+<div class="container-fluid text-center border py-3">
     <h3>Аналитика за производи</h3>
 </div>
-<div class="container-xxl d-flex p-3 border-bottom border-start border-end text-uppercase overflow-hidden align-items-center" id="campaign-list">
+<div class="container-xxl d-flex p-1 border-bottom border-start border-end text-uppercase overflow-hidden align-items-center" id="campaign-list">
   {% for option in search_options %}
   {% if option == daily_item %}
   <a href="{{ option.get_absolute_url }}" class="link-primary text-decoration-none" style="min-width:500px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.product.sku }}</a>
