--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -198,9 +198,9 @@ select {
 <div class="container-xxl d-flex p-1 border-bottom border-start border-end text-uppercase overflow-hidden align-items-center" id="campaign-list">
   {% for option in search_options %}
   {% if option.owner == daily_item %}
-    <a href="{{ option.get_absolute_url }}" class="link-primary text-decoration-none" style="min-width:500px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.product.sku }}</a>
+    <a href="{{ option.owner.get_absolute_url }}" class="link-primary text-decoration-none" style="min-width:500px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
     {% else %}
-    <a href="{{ option.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:500px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.product.sku }}</a>
+    <a href="{{ option.owner.get_absolute_url }}" class="link-secondary text-decoration-none" style="min-width:500px;text-align:center; transition: transform 0.15s ease-out; ">{{ option.owner.product.sku }}</a>
     
   {% endif %}
   {% endfor %}
