--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -47,7 +47,7 @@
                     <input type="text" required name="country" value="Р. Северна Македонија"></li>
 
                     <li><label for="address">Адреса <abbr title="required" class="required">*</abbr></label>
-                    <input type="text" required name="address"></li>
+                    <input type="text" required name="address" id="checkout_input_address"></li>
 
                     <li><label for="city">Град/Село <abbr title="required" class="required">*</abbr></label>
                     <input type="hidden" required name="city" placeholder="Одберете град" class="checkout-city" value="Undefined">
