--- a/analytics/templates/analytics/daily_ad_spend.html
+++ b/analytics/templates/analytics/daily_ad_spend.html
@@ -211,7 +211,7 @@ select {
 <input type="hidden" name="owner" id="owner" value="{{ daily_item.id }}">
   <div class="row mb-4">
     <div class="col">
-        <h4 class="py-3 border-bottom border-2 border-danger d-inline-block ">{{ daily_item.product.title }}</h1>
+        <h4 class="py-3 border-bottom border-2 border-danger d-inline-block " id="current_item">{{ daily_item.product.sku }}</h1>
     </div>
     <form class="col">
       <div class="form-group">
