--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -114,7 +114,7 @@
                     </li>
 
                     <li><label for="number">Телефонски број <abbr title="required" class="required">*</abbr></label>
-                        <input type="tel" placeholder="формат: 072-256-393"required name="number" id="checkout_input_phone"></li>
+                        <input type="tel" placeholder="формат: 07X-XXX-XXX"required name="number" id="checkout_input_phone"></li>
                 </ul>
             
         </div>
