--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -177,6 +177,7 @@
         <h3 id="order_review_heading">Вашата Нарачка</h3>
         <div id="order_review">
             <table class="order-review-table cart-data">
+                <input type="hidden" value="{{ cart.count }}" id="cart_items_count">
                 <thead>
                     <tr>
                         <td>Продукт</td>
