--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -1,6 +1,6 @@
 {% if title != "Кон нарачка" %}
 {% load static %}
-<section id="ordered_items_notice_wrapper" style="display:none;position:relative;z-index:998">
+<section id="ordered_items_notice_wrapper" style="display:none;position:relative;">
 <a href="#" id="ordered_items_notice">
     <img src="{{product.thumbnail_loop.url}}" alt="" class="product-img" id="ordered_product_thumbnail">
     <div class="ordered_items_notice_details">
